--- a/app/Resources/views/home.html.twig
+++ b/app/Resources/views/home.html.twig
@@ -7,8 +7,8 @@
         <meta name="language" content="fr">
         <meta http-equiv="content-language" content="fr">
         
-        <title>Karen.Guiom - Home</title>    
-        <meta name="description" content="Home de karen &amp; guiom" />
+        <title>{{ webSiteName }} - Home</title>    
+        <meta name="description" content="Homepage {{ webSiteName }}" />
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" /> 
 
         {% block stylesheets %}
