--- a/src/GbCreation/HomeBundle/Resources/views/Home/decompte.html.twig
+++ b/src/GbCreation/HomeBundle/Resources/views/Home/decompte.html.twig
@@ -1,6 +1,6 @@
  <article id="decompte">
     <header>
-        <h2>Alice est née depuis</h2>
+        <h2>decompte sur un evevenement</h2>
     </header>
     <div>
         <div class="row">
