--- a/src/GbCreation/HomeBundle/Resources/views/Home/portfolio.html.twig
+++ b/src/GbCreation/HomeBundle/Resources/views/Home/portfolio.html.twig
@@ -11,10 +11,10 @@
                         <div class="row">
                             <div class="4u">
                                 <article class="box box-style2">
-                                    <a href="http://www.guichou21.wordpress.com" class="image image-full">
+                                    <a href="{{ urlBlog }}" class="image image-full">
                                      <img src="{{ asset('bundles/gbcreationhome/images/article_blog.jpg') }}" alt="Blog"/>
                                      </a>
-                                    <h3><a href="http://www.guichou21.wordpress.com">Blog</a></h3>
+                                    <h3><a href="{{ urlBlog }}">Blog</a></h3>
                                     <p>Récits de nos voyages, vacances,...</p>
                                 </article>
                             </div>
@@ -30,10 +30,9 @@
                             <div class="4u">
                                 <article class="box box-style2">
                                     <a href="{{ path('gb_creation_wall_homepage') }}#video" class="image image-full">
-                                    <!-- <a href="https://vimeo.com/user3746792/videos" class="image image-full"> -->
                                      <img src="{{ asset('bundles/gbcreationhome/images/article_video.jpg') }}" alt="Vidéos"/>
                                      </a>
-                                    <h3><a href="https://vimeo.com/user3746792/videos">Vidéos</a></h3>
+                                    <h3><a href="{{ path('gb_creation_wall_homepage') }}#video">Vidéos</a></h3>
                                     <p>Nos montages vidéos.</p>
                                 </article>
                             </div>
@@ -41,10 +40,10 @@
                         <div class="row">
                             <div class="4u">
                                 <article class="box box-style2">
-                                    <a href="http://karen-guiom.no-ip.org:5000" class="image image-full">
+                                    <a href="{{ urlShare }}" class="image image-full">
                                     <img src="{{ asset('bundles/gbcreationhome/images/article_nas.png') }}" alt="Partage de fichiers"/>
                                     </a>
-                                    <h3><a href="http://karen-guiom.no-ip.org:5000">Partage de fichiers</a></h3>
+                                    <h3><a href="{{ urlShare }}">Partage de fichiers</a></h3>
                                     <p>Pour partager des fichiers.</p>
                                 </article>
                             </div>
