--- a/src/GbCreation/WallBundle/Resources/views/Rss/item.html.twig
+++ b/src/GbCreation/WallBundle/Resources/views/Rss/item.html.twig
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <rss version="2.0">
 	<channel>
-		<title>Karen.Guiom &amp; Alice</title>
+		<title>{{ webSiteName }} {{ webSiteDescription }}</title>
 		<link>{{app.request.scheme ~  '://' ~  app.request.host}}{{ path('gb_creation_rss_feed') }}</link>
         <description>Notre mur de photos</description>
         <language>FR-fr</language>
