--- a/app/Resources/TwigBundle/views/Exception/error403.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error403.html.twig
@@ -8,7 +8,7 @@
         <meta name="language" content="fr">
         <meta http-equiv="content-language" content="fr">
         
-        <title>Karen.Guiom - Erreur - {{ status_text }}</title> 
+        <title>{{ webSiteName }}- Erreur - {{ status_text }}</title> 
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" /> 
 
