--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -8,7 +8,7 @@
         <meta name="language" content="fr">
         <meta http-equiv="content-language" content="fr">
         
-        <title>Karen.Guiom - Erreur</title> 
+        <title>{{ webSiteName }} - Erreur</title> 
 
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" /> 
 
