--- a/src/GbCreation/HomeBundle/Resources/views/Home/home.newSlider.html.twig
+++ b/src/GbCreation/HomeBundle/Resources/views/Home/home.newSlider.html.twig
@@ -2,7 +2,7 @@
         <div class="row">
             <div class="12u">
                 <header>
-                    <h1>Karen.Guiom <span class="intro">And Alice</span></h1>
+                    <h1>{{ webSiteName }} <span class="intro">{{ webSiteDescription }}</span></h1>
                 </header>
 
 
