--- a/src/GbCreation/WallBundle/Resources/views/Admin/stats.html.twig
+++ b/src/GbCreation/WallBundle/Resources/views/Admin/stats.html.twig
@@ -6,7 +6,7 @@
       <div class="page-header">
         <h1>Administration</h1>
       </div>
-      <p class="lead">Stats admin à étayer. google stats à inclure?</p>
+      <p class="lead">Stats admin</p>
 
        <!-- <h2>Stats</h2> -->
        <h4>Photos & Vidéos</h4>
