--- a/src/GbCreation/WallBundle/Resources/views/Rss/comment.html.twig
+++ b/src/GbCreation/WallBundle/Resources/views/Rss/comment.html.twig
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <rss version="2.0">
     <channel>
-        <title>Karen.Guiom &amp; Alice</title>
+        <title>{{ webSiteName }} {{ webSiteDescription }}</title>
         <link>{{app.request.scheme ~  '://' ~  app.request.host}}{{ path('gb_creation_rss_comment') }}</link>
         <description>Derniers Commentaires</description>
         <language>FR-fr</language>
