correction design, env local et localtoprod

--- a/src/GbCreation/HomeBundle/Resources/views/Home/news.html.twig
+++ b/src/GbCreation/HomeBundle/Resources/views/Home/news.html.twig
@@ -1,6 +1,6 @@
 
     <article id="news">
-        <header>
+        <header class="lowBottom">
             <h2>Les Nouveautés</h2>
             <span>Regardez si vous avez vu les derniers ajouts ci dessous</span>
         </header>
