--- a/src/GbCreation/HomeBundle/Resources/views/Home/portfolio.html.twig
+++ b/src/GbCreation/HomeBundle/Resources/views/Home/portfolio.html.twig
@@ -1,5 +1,5 @@
  <article id="portfolio">
-                    <header>
+                    <header class="lowBottom">
                         <h2>Nos sites</h2>
                         <span>Pour accéder à nos différents sites de partage</span>
                     </header>
