--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -72,6 +72,7 @@
        <footer  id="footer">
         <p>
           <img src="{{ asset('resources/img/GibeeCreationLogo.png') }}">
+          <span class="version">{{ webSiteVersion }}</span>
           <h3>&copy; 2013 all rights reserved</h3>
       </p>
       </footer>
