--- a/app/Resources/views/home.html.twig
+++ b/app/Resources/views/home.html.twig
@@ -34,7 +34,6 @@
                 <li><a href="#portfolio">Nos sites</a></li>
                <!-- <li><a href="#decompte">Décompte</a></li> -->
             </ul>
-             <div class="ribbonWrapper"><div class="ribbon-wrapper-green"><div class="ribbon-green">Nouvelle Version</div></div></div>
         </nav>
 
         <!-- Home -->
@@ -60,7 +59,8 @@
 
        <div id="footer">
              <p>
-              <img src="{{ asset('resources/img/GibeeCreationLogo.png') }}">
+                <img src="{{ asset('resources/img/GibeeCreationLogo.png') }}">
+                <span class="version">{{ webSiteVersion }}</span>
                 <h3>&copy; 2013 all rights reserved</h3>
             </p>
         </div>
