--- a/web/resources/css/sy2-wall-base.css
+++ b/web/resources/css/sy2-wall-base.css
@@ -181,7 +181,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 20px;
     text-align: center;
 }
-
+#footer .version{ margin-left:30px; font-family: 'Irish Grover'; color: #266BB2;}
 /*********************************/
 /* Grille Affichage Accueil      */
 /*********************************/
