--- a/web/resources/css/sy2-admin.wall-base.css
+++ b/web/resources/css/sy2-admin.wall-base.css
@@ -169,6 +169,9 @@ h1, h2, h3, h4, h5, h6 {
   width: auto;
 }
 
+.rotate-button{
+  padding-bottom: 30px;
+}
 /* DropBox for upload
 -------------------------------------------------- */
 
